syntax = "proto3";
option go_package = "./";
package chat;

service ChatService {
  rpc Send(SendRequest) returns (SendResponse) {}
  rpc Receive(ReceiveRequest) returns (ReceiveResponse) {}
  rpc ReceiveStream(ReceiveRequest) returns (stream ReceiveResponse) {}
  rpc StreamConnectionCount(StreamConnectionCountRequest) returns (StreamConnectionCountResponse) {}
}

message SendRequest {
  string message = 1;
  string name = 2;
}

message SendResponse {}

message ReceiveRequest {}

message ReceiveResponse {
  repeated Message messages = 1;
}

message Message {
  string message = 1;
  string name = 2;
}

message StreamConnectionCountRequest {}

message StreamConnectionCountResponse {
  int32 count = 1;
}
